[package]
authors = ["Shadlock0133 <tomek-kubel2@wp.pl>"]
name = "rustpusher"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
libretro-backend = { git = "https://github.com/Shadlock0133/libretro-backend" }
rustpusher-cpu = { path = "rustpusher-cpu" }

[profile.release]
lto = true
panic = "abort"
