[package]
authors = ["Shadlock0133 <tomek-kubel2@wp.pl>"]
name = "rustpusher-libretro"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
libretro-backend = { git = "https://github.com/Shadlock0133/libretro-backend" }
rustpusher-cpu = { path = "../cpu" }

[profile.release]
# lto = true
panic = "abort"
